argocd/preproduction/ingress/ing-confdb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-confdb
  namespace: confdb
  annotations:
    kubernetes.io/ingress.class: nginx
    # restrict access to this ingress controller from specific IPs
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#whitelist-source-range
    nginx.ingress.kubernetes.io/whitelist-source-range: 137.138.31.19,137.138.158.91,137.138.33.200,137.138.54.48
#    nginx.ingress.kubernetes.io/affinity: "cookie"
#    nginx.ingress.kubernetes.io/session-cookie-name: "route"
#    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
#    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: cmsweb-srv.cern.ch
    http:
      paths:
      - path: /confdb
        backend:
          serviceName: confdb
          servicePort: 8340
